# Project-ALDAS

./: .gitignore  .gitmodules  LICENSE  README.md
aldas_controller/: CMakeLists.txt
aldas_ros_workspace/install/: local_setup.sh  setup.sh
aldas_ros_workspace/install/aldas_controller/share/aldas_controller/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
aldas_ros_workspace/install/aldas_state_machine/share/aldas_state_machine/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
aldas_ros_workspace/install/aldas_vision/share/aldas_vision/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
aldas_ros_workspace/install/px4_msgs/share/px4_msgs/: local_setup.sh  package.sh
aldas_ros_workspace/install/px4_msgs/share/px4_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  px4_msgsConfig.cmake
aldas_ros_workspace/install/px4_msgs/share/px4_msgs/msg/: ActuatorServosTrim.json  CellularStatus.idl  CellularStatus.json  DetectAndAvoid.idl  DetectAndAvoidMostUrgent.idl  DetectAndAvoidMostUrgent.json  DifferentialPressure.json  FiducialMarkerPosReport.json  FiducialMarkerYawReport.json  FixedWingLateralGuidanceStatus.idl  InternalCombustionEngineStatus.json  OpenDroneIdBasicId.json  PositionSetpoint.json  PositionSetpointTriplet.json  SetpointConfigReply.idl  VehicleCommand.idl  (+7 more)
aldas_ros_workspace/log/: latest_build
aldas_ros_workspace/src/aldas_controller/: CMakeLists.txt
aldas_ros_workspace/src/aldas_controller/src/: offboard_hover_node.cpp
aldas_state_machine/: package.xml  setup.cfg
aldas_vision/: CMakeLists.txt  package.xml
ros2_ws/src/aldas_state_machine/: setup.py
(+262 files in other folders)
